--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "pretty":"prettier --write ."
+  
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -30,8 +32,8 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
     "next": "14.2.4",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
 }
